--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Finance-Project</title>
   </head>
   <body>
